--- a/stacks/deploy/test.yaml
+++ b/stacks/deploy/test.yaml
@@ -25,3 +25,6 @@ components:
         # (Incorrect Example) Passing null values in as a templated value without using toJson or toRawJson
         # results in a string object with a value of "<no value>"
         test_not_actually_null_string: '{{ (atmos.Component "first" .stack).outputs.first_output.test_null_string }}'
+
+        test_json_string: '{{ (atmos.Component "first" .stack).outputs.first_output.test_json_string | toJson }}'
+        test_object_from_json_string: '{{ (atmos.Component "first" .stack).outputs.first_output.test_json_string }}'
